<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/secondary"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:paddingHorizontal="8dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_dashboard"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/bg_berada"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/tv_greeting_dashboard"
        android:textSize="20dp"
        android:fontFamily="sans-serif-medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="35dp"
        android:gravity="center"
        android:text="@string/greeting"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/tv_info_dashboard"
        android:textSize="14dp"
        android:fontFamily="sans-serif"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="35dp"
        android:text="@string/dashboard_info"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_greeting_dashboard" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_carousel"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="25dp"
        android:overScrollMode="never"
        android:elevation="10dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_dashboard" />

    <LinearLayout
        android:id="@+id/indicatorsContainer"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@+id/vp_carousel" />

    <RelativeLayout
        android:id="@+id/sc_dashboard"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        android:background="@drawable/background_dashboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="1dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_dashboard"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/ly_budaya"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="148dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/budaya" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginHorizontal="15dp"
                android:src="@drawable/budaya2" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/budaya3" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvbudaya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ly_budaya"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/tvbudaya"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_resep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvbudaya"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="Resep Masakan Sumatera Utara"
            android:textSize="12dp" />

        <LinearLayout
            android:id="@+id/ly_resep"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/tv_resep"
            android:layout_alignParentStart="true"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingHorizontal="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/makanan" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/makanan2" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/makanan3" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvmakanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ly_resep"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/tvbudaya"
            android:textSize="12dp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>