<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".admin.DashboardActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="5dp"
                android:layout_marginStart="16dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/iv_dashboard"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_berada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/tv_greeting_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/greeting"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <TextView
        android:id="@+id/tv_info_dashboard"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/dashboard_info"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:fontFamily="sans-serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting_dashboard" />


    <ScrollView
        android:id="@+id/scrollDashboard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_info_dashboard">


        <LinearLayout
            android:id="@+id/sc_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_dashboard"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingHorizontal="16dp">

            <Button
                android:id="@+id/btn_budaya"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:background="@drawable/background_item"
                android:text="Tambah Budaya"/>

            <Button
                android:id="@+id/btn_masakan"
                android:layout_width="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:src="@drawable/background_item"
                android:text="Tambah Masakan"/>

            <LinearLayout
                android:id="@+id/ly_budaya"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingHorizontal="20dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/budaya" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="15dp"
                    android:src="@drawable/budaya2" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/budaya3" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvbudaya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tvbudaya"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_resep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:text="Resep Masakan Sumatera Utara"
                android:textSize="12dp" />

            <LinearLayout
                android:id="@+id/ly_resep"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="5dp"
                    android:src="@drawable/makanan" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="5dp"
                    android:src="@drawable/makanan2" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="5dp"
                    android:src="@drawable/makanan3" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvmakanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/tvbudaya"
                android:textSize="12dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>